# Pershia

./: .gitignore  README.md  docker-compose.yml  main.py  package-lock.json
backend/: .gitignore
backend/wardrobe/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/wardrobe/app/: dependencies.py  main.py
backend/wardrobe/app/core/: config.py  database.py
backend/wardrobe/app/models/: __init__.py  collection.py  garment.py  image.py  outfit.py  user.py  users.py
backend/wardrobe/app/routes/: collection.py  garment.py  outfit.py  recommendation.py  upload.py  user.py  users.py
backend/wardrobe/app/services/: embedding_service.py  google_auth_service.py  image_service.py  qwen_service.py
backend/wardrobe/lib/: fashionclip_prototype.py  main.py  qwen-langgraph.py
backend/wardrobe/migrations/: env.py
backend/wardrobe/migrations/versions/: a1cfa4a2ac22_first_database_migration.py  b2d3e5f6a7b8_add_description_to_garments.py  c3d4e5f6a7b8_add_name_google_id_to_users.py  d4e5f6a7b8c9_add_layout_cols_to_outfits_garments.py  e5f6a7b8c9d0_add_collections_tables.py  f6a7b8c9d0e1_drop_users_updated_at_trigger.py  g7b8c9d0e1f2_add_garment_embedding.py
database/: db_data.sql
db/: db_data.sql
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/context/: AuthContext.tsx
frontend/app/pages/: WardrobeItems.tsx
frontend/app/wardrobe/: BottomNav .tsx  PageTransition.tsx  WardrobeTopNav.tsx  (+1 more)
frontend/lib/: remove-bg.ts
(+32 files in other folders)
