[project]
name = "wardrobe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.13.0",
    "asyncpg==0.30.0",
    "boto3==1.35.0",
    "fastapi==0.115.0",
    "httpx==0.27.0",
    "langchain>=0.3.28",
    "langchain-nvidia-ai-endpoints>=0.3.19",
    "langgraph==0.2.28",
    "marqo>=3.18.0",
    "motor>=3.7.1",
    "passlib[bcrypt]==1.7.4",
    "pgvector==0.3.5",
    "pillow==10.4.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings==2.5.0",
    "pydantic[email]==2.9.0",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.12",
    "redis==5.0.8",
    "sqlalchemy==2.0.36",
    "sqlmodel>=0.0.33",
    "uvicorn[standard]==0.30.0",
]
